test/compile_errors/stage1/obj/non_float_passed_to_floatToInt.zig
export fn entry() void {
    const x = @floatToInt(i32, @as(i32, 54));
    _ = x;
}

// non float passed to @floatToInt
//
// tmp.zig:2:32: error: expected float type, found 'i32'
